# vibecoding_helper

./: .gitignore  AGENTS.md  ANALYSIS.md  GEMINI.md  Makefile  PLAN.md  PRD.md  README.md  RULES.md  SCHEMA.md  TECH_STACK.md  TESTING.md  TODO.md  TREE.md  USER_STORIES.md  pyproject.toml
.github/workflows/: test.yml
.vibe/: config.yaml  state.json
scripts/: test.sh
src/vibe/: __init__.py  main.py
src/vibe/cli/: app.py
src/vibe/cli/commands/: __init__.py  chat.py  code.py  design.py  init.py  plan.py  scaffold.py  status.py  test.py  undo.py  verify.py
src/vibe/cli/ui/: __init__.py  console.py  display.py  progress.py  prompts.py
src/vibe/core/: __init__.py  config.py  context.py  exceptions.py  state.py  workflow.py
src/vibe/handlers/: __init__.py  file.py  git.py  parser.py  scaffold.py
src/vibe/prompts/: __init__.py  loader.py
src/vibe/prompts/phases/: phase0_init.txt  phase1_plan.txt  phase2_design.txt  phase3_code.txt  phase4_test.txt
src/vibe/prompts/system/: agent_claude.txt  analyst_gemini.txt  base.txt  rules_aware.txt
src/vibe/prompts/utils/: audit_request.txt  edge_case_gen.txt
src/vibe/providers/: __init__.py  anthropic.py  base.py  factory.py  google.py  openai.py  orchestrator.py
src/vibe/templates/: PRD.md.j2  RULES.md.j2  SCHEMA.md.j2  TECH_STACK.md.j2  TODO.md.j2  TREE.md.j2  USER_STORIES.md.j2  __init__.py  loader.py
src/vibe/verifiers/: __init__.py  base.py  factory.py  flutter.py  java.py  python.py  typescript.py
tests/: conftest.py
tests/integration/: test_init_flow.py
tests/unit/: test_config.py  test_parser.py  test_state.py
tests/unit/providers/: __init__.py  test_base.py
